MB Videos ready

--- a/Code/Sandbox.ipynb
+++ b/Code/Sandbox.ipynb
@@ -28,7 +28,7 @@
 			"metadata": {},
 			"outputs": [],
 			"source": [
-				"from IPython import Video"
+				"from IPython.display import Video"
 			]
 		},
 		{
@@ -111,7 +111,72 @@
 			"id": "ef0ff98a",
 			"metadata": {},
 			"source": [
-				"### Create An Automation\n"
+				"### Create an Automation\n"
+			]
+		},
+		{
+			"cell_type": "markdown",
+			"id": "04c1693b",
+			"metadata": {},
+			"source": [
+				"For us, we hit an error and the last number printed was 85. **Okay, so how do we turn this into an automation?** We've written this bit of debugging code hundreds of time to speed up debugging, we'd love to automate this.\n",
+				"\n",
+				"First, we'll add an automation to the code, and then we'll add code to the automation. \n",
+				"\n",
+				"To add an automation, we will add the automation brackets and then type the automation name.\n",
+				"- Add the automation brackets by either: \n",
+				"  - Pressing alt+a\n",
+				"  - Typing #[ ]\n",
+				"\n",
+				"Run the cell below and watch the video for an example:"
+			]
+		},
+		{
+			"cell_type": "code",
+			"execution_count": null,
+			"id": "e46a295b",
+			"metadata": {},
+			"outputs": [],
+			"source": [
+				"Video('Videos/AddAutomationToCode.mp4')"
+			]
+		},
+		{
+			"cell_type": "markdown",
+			"id": "2489722c",
+			"metadata": {},
+			"source": [
+				"Now, add an automation named Test to your code after the for loop and above test_iteration += 1. First add the automation brackets, and then type Test between the brackets. "
+			]
+		},
+		{
+			"cell_type": "code",
+			"execution_count": null,
+			"id": "0a62542c",
+			"metadata": {},
+			"outputs": [],
+			"source": [
+				"test_iteration = 0\n",
+				"\n",
+				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
+				"encodedStory = ''\n",
+				"\n",
+				"for i in range(story.index('His'), 500):\n",
+				"    #[Test]\n",
+				"    test_iteration += 1\n",
+				"    print(test_iteration)\n",
+				"\n",
+				"    encodedStory += chr(ord(story[i]) + 1)\n",
+				"\n",
+				"print(encodedStory)"
+			]
+		},
+		{
+			"cell_type": "markdown",
+			"id": "a70cee2f",
+			"metadata": {},
+			"source": [
+				"### Add Code to the Automation"
 			]
 		},
 		{
@@ -119,14 +184,11 @@
 			"id": "c6f51b96",
 			"metadata": {},
 			"source": [
-				"For us, we hit an error and the last number printed was 85. **Okay, so how do we turn this into an automation?** We've written this bit of debugging code hundreds of time to speed up debugging, we'd love to automate this.\n",
 				"\n",
-				"You can easily add code to automations by doing the following: \n",
+				"Now we are ready to add code to our automation. You can easily add code to automations by doing the following: \n",
 				"- Highlight the code you want to add to the automation [**Test**]. \n",
 				"- Drag and drop the highlighted code into the middle of [**Test**]. \n",
 				"- Watch as a new file is made for the [**Test**] automation and the dropped code added to the automation.\n",
-				" \n",
-				"*Note, adding an automation in code is simple, we'll cover that in another Sandbox*\n",
 				"\n",
 				"Run the cell below to see a video example of dragging and dropping code onto an automation. "
 			]
@@ -138,7 +200,7 @@
 			"metadata": {},
 			"outputs": [],
 			"source": [
-				"Video('DragAndDrop.mp4')"
+				"Video(\"Videos/DragAndDrop.mp4\")"
 			]
 		},
 		{
@@ -165,16 +227,11 @@
 			"metadata": {},
 			"outputs": [],
 			"source": [
-				"test_iteration = 0\n",
 				"\n",
 				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
 				"encodedStory = ''\n",
 				"\n",
 				"for i in range(story.index('His'), 500):\n",
-				"    #[Test]\n",
-				"\n",
-				"    test_iteration += 1\n",
-				"    print(test_iteration)\n",
 				"\n",
 				"    encodedStory += chr(ord(story[i]) + 1)\n",
 				"\n",
@@ -280,7 +337,7 @@
 			"metadata": {},
 			"outputs": [],
 			"source": [
-				"#TODO: Video using arrows"
+				"Video('Videos/ChangeCode.mp4')"
 			]
 		},
 		{
@@ -289,9 +346,12 @@
 			"metadata": {},
 			"source": [
 				"\n",
-				"Previously, the line test_iteration = 0 was generated right after the automation, rather than at the start of the cell. In Test.py, use the arrows to generate test_iteration = 0 at the start of the cell with self.CodeCellStart.\n",
+				"Previously, the line test_iteration = 0 was generated right after the automation, rather than at the start of the cell. \n",
 				"\n",
-				"Then, run Arctic Fox and see the changes in the cell below!"
+				"In Test.py, use the arrows to generate test_iteration = 0 at the start of the cell with self.CodeCellStart. Make sure to **save** Test.py.\n",
+				"\n",
+				"\n",
+				"Then, add a [**Test**] automation again after the for loop and run Arctic Fox and see the changes in the cell below!"
 			]
 		},
 		{
@@ -305,8 +365,7 @@
 				"encodedStory = ''\n",
 				"\n",
 				"for i in range(story.index('His'), 500):\n",
-				"    #[Test]\n",
-				"\n",
+				"    \n",
 				"    encodedStory += chr(ord(story[i]) + 1)\n",
 				"\n",
 				"print(encodedStory)"
