MB Changed to instruction notebook style

--- a/Code/Instructions.ipynb
+++ b/Code/Instructions.ipynb
@@ -56,23 +56,7 @@
 			"source": [
 				"Let's start by setting up a small use case. When we hit an error while debugging we want to pinpoint when the error occurs. A simple way to do this is to use a number variable, increment the variable each time a line of code is called, and print the variable so we know when it hits an error. \n",
 				"\n",
-				"Here's a very simple example of hitting an <span style=\"color:red\">error</span>. Run the code below to hit the <span style=\"color:red\">error</span>."
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"id": "c2e97d8e",
-			"metadata": {},
-			"outputs": [],
-			"source": [
-				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
-				"encodedStory = ''\n",
-				"\n",
-				"for i in range(story.index('His'), 500):\n",
-				"    encodedStory += chr(ord(story[i]) + 1)\n",
-				"\n",
-				"print(encodedStory)"
+				"In the file EndoeMessage.ipynb, we have a very simple example of hitting an <span style=\"color:red\">error</span>. Run the code in EncodeMessage.ipynb to hit the <span style=\"color:red\">error</span>."
 			]
 		},
 		{
@@ -80,30 +64,20 @@
 			"id": "906cc322",
 			"metadata": {},
 			"source": [
-				"Okay, so clearly, the string goes out of bounds. To find what iteration this happens, we may track the number of calls with a test variable. Then, we'll print variable to see when the error occurs. \n",
+				"Okay, clearly, the string goes out of bounds. To find what iteration this happens, we may track the number of calls with a test variable. Then, we'll print variable to see when the error occurs. \n",
 				"\n",
-				"Run the code below to display test_iteration before hitting an error: "
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"id": "f0fc4b8a",
-			"metadata": {},
-			"outputs": [],
-			"source": [
+				"Change the code cell with the for loop to the following: \n",
+				"```python\n",
 				"test_iteration = 0\n",
-				"\n",
-				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
-				"encodedStory = ''\n",
 				"\n",
 				"for i in range(story.index('His'), 500):\n",
 				"    test_iteration += 1\n",
 				"    print(test_iteration)\n",
 				"\n",
 				"    encodedStory += chr(ord(story[i]) + 1)\n",
+				"```\n",
 				"\n",
-				"print(encodedStory)"
+				"Now, run the code in the file to display test_iteration before hitting an error. "
 			]
 		},
 		{
@@ -146,29 +120,15 @@
 			"id": "2489722c",
 			"metadata": {},
 			"source": [
-				"Now, add an automation named Test to your code after the for loop and above test_iteration += 1. First add the automation brackets, and then type Test between the brackets. "
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"id": "0a62542c",
-			"metadata": {},
-			"outputs": [],
-			"source": [
-				"test_iteration = 0\n",
-				"\n",
-				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
-				"encodedStory = ''\n",
-				"\n",
+				"Now, add an automation named Test to your code after the for loop and above test_iteration += 1. First add the automation brackets, and then type Test between the brackets. The for loop should look like: \n",
+				"```python\n",
 				"for i in range(story.index('His'), 500):\n",
-				"    #[Test]\n",
+				"    [Test]\n",
 				"    test_iteration += 1\n",
 				"    print(test_iteration)\n",
 				"\n",
 				"    encodedStory += chr(ord(story[i]) + 1)\n",
-				"\n",
-				"print(encodedStory)"
+				"```"
 			]
 		},
 		{
@@ -218,24 +178,6 @@
 				"test_iteration += 1\n",
 				"print(test_iteration)\n",
 				"```   "
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"id": "eb583b44",
-			"metadata": {},
-			"outputs": [],
-			"source": [
-				"\n",
-				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
-				"encodedStory = ''\n",
-				"\n",
-				"for i in range(story.index('His'), 500):\n",
-				"\n",
-				"    encodedStory += chr(ord(story[i]) + 1)\n",
-				"\n",
-				"print(encodedStory)"
 			]
 		},
 		{
@@ -351,24 +293,7 @@
 				"In Test.py, use the arrows to generate test_iteration = 0 at the start of the cell with self.CodeCellStart. Make sure to **save** Test.py.\n",
 				"\n",
 				"\n",
-				"Then, add a [**Test**] automation again after the for loop and run Arctic Fox and see the changes in the cell below!"
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"id": "76b0fdde",
-			"metadata": {},
-			"outputs": [],
-			"source": [
-				"story = 'Barkley revved the engine, paws gripping the wheel. His furry friends buckled up as he wagged his tail, ready for a road trip adventure.'\n",
-				"encodedStory = ''\n",
-				"\n",
-				"for i in range(story.index('His'), 500):\n",
-				"    \n",
-				"    encodedStory += chr(ord(story[i]) + 1)\n",
-				"\n",
-				"print(encodedStory)"
+				"Automate the code and see it generate test_iteration = 0 where we want it at the start of the cell. "
 			]
 		},
 		{
@@ -376,6 +301,7 @@
 			"id": "0b083285",
 			"metadata": {},
 			"source": [
+				"### Wrapping Up\n",
 				"That's it! In this Sandbox, we introduced you to creating custom automations by dragging and dropping code onto an automation. We'll continue with this example in the next Sandbox and focus on adding items to automations and conditional logic within an automation. See you there!"
 			]
 		},
